# wotan

./: CMakeLists.txt
SRC/analysis/: analysis_main.cxx  enumerate.cxx
SRC/base/: wotan_init.cxx  wotan_types.cxx  wotan_types.h
SRC/draw/: draw.cxx
SRC/libs/: CMakeLists.txt
SRC/parse/: parse_rr_graph_file.cxx  parse_rr_graph_file.h
arch/4LUT_DSP/L1/: k4_N8_topology-1.0sL1_22nm.xml
arch/4LUT_DSP/L16/: k4_N8_topology-1.0sL16_22nm.xml
arch/4LUT_DSP/L2/: k4_N8_topology-1.0sL2_22nm.xml
arch/4LUT_DSP/L2-16/: k4_N8_topology-0.65sL2-0.2spL2-0.15gL16_22nm.xml  k4_N8_topology-0.85sL2-0.15gL16_22nm.xml
arch/4LUT_DSP/L2-4/: k4_N8_topology-0.65sL2-0.2spL2-0.15gL4_22nm.xml  k4_N8_topology-0.85sL2-0.15gL4_22nm.xml
arch/4LUT_DSP/L2-8/: k4_N8_topology-0.65sL2-0.2spL2-0.15gL8_22nm.xml  k4_N8_topology-0.85sL2-0.15gL8_22nm.xml
arch/4LUT_DSP/L4/: k4_N8_topology-1.0sL4_22nm.xml
arch/4LUT_DSP/L8/: k4_N8_topology-1.0sL8_22nm.xml
arch/4LUT_DSP/test/: k4_N8_topology-1.0sL1_22nm.xml  k4_N8_topology-1.0sL1_22nm_change_L1_connectivity.xml  k4_N8_topology-1.0sL4_22nm.xml  k4_N8_topology-1.0sL8_22nm.xml
arch/6LUT/L1/: k6_N10_topology-1.0sL1_22nm.xml
arch/6LUT/L16/: k6_N10_topology-1.0sL16_22nm.xml
arch/6LUT/L2/: k6_N10_topology-1.0sL2_22nm.xml
arch/6LUT/L4/: k6_N10_topology-1.0sL4_22nm.xml
arch/6LUT/L4-16/: k6_N10_topology-0.55sL4-0.3spL4-0.15gL16_22nm.xml  k6_N10_topology-0.85sL4-0.15gL16_22nm.xml
arch/6LUT/L4-4/: k6_N10_topology-0.55sL4-0.3spL4-0.15gL4_22nm.xml  k6_N10_topology-0.85sL4-0.15gL4_22nm.xml
arch/6LUT/L4-8/: k6_N10_topology-0.55sL4-0.3spL4-0.15gL8_22nm.xml  k6_N10_topology-0.85sL4-0.15gL8_22nm.xml
arch/6LUT/L8/: k6_N10_topology-1.0sL8_22nm.xml
scripts/: arch_handler.py  arch_points.py  compare.py  my_regex.py  run_wotan_one_arch.py  tester_script.py  wotan_tester.py
